force-app/main/default/objects/cvcs__c/cvcs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>cvcs</label>
</CustomObject>