force-app/main/default/objects/cvcs__c/fields/c1__c.field-meta.xml
<CustomField>
    <fullName>c1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>c1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>