force-app/main/default/objects/cvcs__c/fields/c2__c.field-meta.xml
<CustomField>
    <fullName>c2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>c2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>