force-app/main/default/objects/cvcs__c/fields/c3__c.field-meta.xml
<CustomField>
    <fullName>c3__c</fullName>
    <label>c3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>